compiler/tests/en/errors/pure_fnval.salam
// EXPECT: E012
pure func apply(f : func(int) int, x : int) : int:
    ret f(x)
end

func main:
    g := (v : int) => v + 1
    println apply(g, 4)
end
